--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,18 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Dean McHugh
     - name: Date of Birth
-      value: 14th March 1879
+      value: 9th November 1993
     - name: Languages
-      value: English, German
+      value: English, 
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: PhD Logic
+      institution: Institute for Logic, Language and Computation, University of Amsterdam
+      year: 2023
       description:
         - Description 1.
         - Description 2.
@@ -21,9 +21,9 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+    - title: MSc Logic
+      institution: Institute for Logic, Language and Computation, University of Amsterdam
+      year: 2018
       description:
         - Description 1.
         - Description 2.
@@ -31,9 +31,9 @@
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Postdoctoral Researcher
+      institution: University of Edinburgh
+      year: 2025 - 2027
       description:
         - Description 1.
         - Description 2.
@@ -41,25 +41,16 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+    - title: Fulbright Visiting Scholar
+      institution: New York University
+      year: 2025 - 2026
       description:
         - Description 1.
         - Description 2.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Postdoctoral Researcher
+      institution: Institute for Logic, Language and Computation, University of Amsterdam
+      year: 2023-2025
 
 - title: Open Source Projects
   type: time_table
