Add coauthor Keny Chatain
Added coauthor Keny Chatain with URL.

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,3 +1,7 @@
+"chatain":
+  - firstname: ["Keny", "K.", "Keny Chatain"]
+    url: https://kenyc.github.io
+
 "klochowicz":
   - firstname: ["Tomasz", "T.", "Tomasz Klochowicz"]
     url: https://www.tklochowicz.com
