--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -9,7 +9,7 @@ organization: edinburgh # your organization as appears in the subdomain
 # arxiv_id: # your arXiv author ID
 # blogger_url: # your blogger URL
 # bluesky_url: # your bluesky URL
-cv_pdf: /assets/pdf/example_pdf.pdf # path to your CV PDF file
+cv_pdf: /assets/pdf/academic-cv # path to your CV PDF file
 # dblp_url: # your DBLP profile url
 # discord_id: # your discord id (18-digit unique numerical identifier)
 email: deanmchugh1@gmail.com # your email address
@@ -34,11 +34,11 @@ orcid_id: 0000-0003-4136-7303
 # pinterest_id: # your pinterest id
 # publons_id: # your ID on Publons
 # quora_username: # your Quora username
-research_gate_profile: https://www.researchgate.net/profile/Dean-Mchugh-2
+research_gate_profile: Dean-Mchugh-2
 # rss_icon: true # comment this line to hide the RSS icon
 scholar_userid: 03rf0uEAAAAJ
 # scopus_id: # your profile on Scopus
-semanticscholar_id: # https://www.semanticscholar.org/author/Dean-McHugh/2359443490
+semanticscholar_id: https://www.semanticscholar.org/author/Dean-McHugh/2359443490
 # spotify_id: # your spotify id
 # stackoverflow_id: # your stackoverflow id
 # strava_userid: # your strava user id
