--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -38,7 +38,7 @@ research_gate_profile: Dean-Mchugh-2
 # rss_icon: true # comment this line to hide the RSS icon
 scholar_userid: 03rf0uEAAAAJ
 # scopus_id: # your profile on Scopus
-semanticscholar_id: https://www.semanticscholar.org/author/Dean-McHugh/2359443490
+semanticscholar_id: Dean-McHugh/2359443490
 # spotify_id: # your spotify id
 # stackoverflow_id: # your stackoverflow id
 # strava_userid: # your strava user id
